# computational-finance

./: CMakeLists.txt
include/ffc/: types.hpp
include/ffc/core/: types.hpp
include/ffc/core/approx/: horner.hpp
include/ffc/core/mem/: alignment.hpp
include/ffc/core/num/: c128.hpp  c64.hpp  complex.hpp  concepts.hpp  consts.hpp  f32.hpp  f64.hpp  fp.hpp  integral.hpp  num.hpp  traits.hpp
include/ffc/core/ptr/: repr.hpp  uptr.hpp
include/ffc/core/ptr/uptr/: uptr.hpp
include/ffc/core/specfun/: norminv.hpp  rlo.hpp
include/ffc/num/: aliases.hpp  traits.hpp  types.hpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/core/approx/: CMakeLists.txt  core_horner_approxtest.cpp
tests/core/num/: CMakeLists.txt  comptime.cpp  core_numtest.cpp
tests/core/ptr/: CMakeLists.txt  core_uptrtest.cpp
tests/core/specfun/: CMakeLists.txt  core_norminv_specfuntest.cpp
